<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_marginBottom="@dimen/elementMargin"
            android:background="@color/colorVideoBackground">
            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/player_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_media_player"
                android:focusable="true" />
            <TextView
                android:id="@+id/no_video_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/text_no_video"
                android:contentDescription="@string/desc_no_video"
                style="@style/TextOverViewText"
                />
            <ImageView
                android:id="@+id/big_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                />
        </RelativeLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/cardPadding">
                <TextView
                    android:id="@+id/step_description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/text_placeholder_description"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/cardPadding">
                <TextView
                    android:id="@+id/previous_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/action_previous"
                    android:linksClickable="true"
                    android:textColor="@color/text_link_color"
                    style="@style/NavigationLinkText"
                    />
                <TextView
                    android:id="@+id/next_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/action_next"
                    android:linksClickable="true"
                    android:textColor="@color/text_link_color"
                    style="@style/NavigationLinkText"
                    />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>


